--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+goffice 0.8.16:
+
+Andreas:
+	* Improve ODF 1.2 output of fraction format.
+
+Morten:
+	* Fix long-double compilation issue.
+	* Improve accuracy of complex power.
+	* Fix GOFormat problem resulting in "-0".  [#650928]
+
+--------------------------------------------------------------------------
 goffice 0.8.15:
 
 Andreas:
