--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goffice (0.8.16-1) unstable; urgency=low
+
+  * Updated to 0.8.16
+
+ -- Tomasz Pieniazek <t.pieniazek@gazeta.pl>  Sun, 19 Jun 2011 14:53:51 +0200
+
 goffice (0.8.15-1) unstable; urgency=low
 
   * Updated to 0.8.15
