--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2011-06-16  Morten Welinder <terra@gnome.org>
+
+	* Release 0.8.16
+
+2011-06-13  Valek Filippov <frob@df.ru>
+
+	* ru.po: Russian translation update
+
 2011-05-21  Morten Welinder <terra@gnome.org>
 
 	* Release 0.8.15
