--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-16  Morten Welinder <terra@gnome.org>
+
+	* Release 0.8.16
+
 2011-05-21  Morten Welinder <terra@gnome.org>
 
 	* Release 0.8.15
