--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+goffice 0.8.17:
+
+Morten:
+	* Plug leaks.
+	* Fix noisy leak.  [#652420]
+
+--------------------------------------------------------------------------
 goffice 0.8.16:
 
 Andreas:
