--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goffice (0.8.17-1) unstable; urgency=low
+
+  * Updated to 0.8.17
+
+ -- Tomasz Pieniazek <t.pieniazek@gazeta.pl>  Wed,  3 Aug 2011 21:15:19 +0200
+
 goffice (0.8.16-1) unstable; urgency=low
 
   * Updated to 0.8.16
