--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-31  Morten Welinder <terra@gnome.org>
+
+	* Release 0.8.17
+
 2011-06-16  Morten Welinder <terra@gnome.org>
 
 	* Release 0.8.16
